[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Images/Labs.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/MiniGame/Chimie/ErlenMeyer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MiniGame/Chimie/Ph_Chimie_mini_game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/MiniGame/Chimie/pipettes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sounds/corporate-beat-ambient-ig-version-loop-1-7294.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scenes/MiniGame/Chimie/MiniGameCountdownTimer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MiniGame/radioactif/tap_objective.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "shake"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 160, 280 ), Vector2( 152, 272 ), Vector2( 136, 280 ), Vector2( 128, 272 ), Vector2( 136, 264 ), Vector2( 152, 280 ), Vector2( 144, 280 ), Vector2( 136, 272 ), Vector2( 144, 272 ), Vector2( 144, 280 ), Vector2( 160, 280 ), Vector2( 152, 272 ), Vector2( 136, 280 ), Vector2( 128, 272 ), Vector2( 136, 264 ), Vector2( 152, 280 ), Vector2( 144, 280 ), Vector2( 136, 272 ), Vector2( 144, 272 ), Vector2( 144, 280 ) ]
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 56, 56, 0, 0, 0, 0, 72, 120, 0, 0, 0, 0, 120, 56, 0, 0, 0, 0, 152, 104, 0, 0, 0, 0, 216, 64, 0, 0, 0, 0, 240, 112, 0, 0, 0, 0, 272, 72, 0, 0, 0, 0, 312, 104, 0, 0, 0, 0, 392, 64, 0, 0, 0, 0, 416, 120, 0, 0, 0, 0, 296, 128, 0, 0, 0, 0, 296, 64, 0, 0, 0, 0, 336, 96, 0, 0, 0, 0, 248, 128, 0, 0, 0, 0, 184, 88, 0, 0, 0, 0, 160, 48, 0, 0, 0, 0, 312, 56, 0, 0, 0, 0, 368, 112, 0, 0, 0, 0, 168, 160, 0, 0, 0, 0, 80, 80, 0, 0, 0, 0, 32, 168, 0, 0, 0, 0, 248, 208, 0, 0, 0, 0, 400, 176, 0, 0, 0, 0, 264, 128, 0, 0, 0, 0, 184, 192, 0, 0, 0, 0, 72, 240, 0, 0, 0, 0, 320, 240, 0, 0, 0, 0, 312, 104, 0, 0, 0, 0, 152, 104, 0, 0, 0, 0, 96, 176, 0, 0, 0, 0, 296, 192, 0, 0, 0, 0, 384, 208, 0, 0, 0, 0, 152, 224, 0, 0, 0, 0, 264, 160, 0, 0, 0, 0, 104, 64, 0, 0, 0, 0, 56, 56 )
}

[node name="Ph_Chimie_mini_game" type="Node"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labs" type="Sprite" parent="Control"]
position = Vector2( 152, 368 )
scale = Vector2( 0.59386, 0.589474 )
texture = ExtResource( 1 )

[node name="ErlenMeyer" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 280 )
scale = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ErlenMeyer"]
method_call_mode = 1
anims/shake = SubResource( 1 )

[node name="PipettePath2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="PipettePath2D"]
position = Vector2( 56, 56 )
rotation = 1.32582

[node name="Pipettes" parent="." instance=ExtResource( 4 )]
position = Vector2( -21.6114, 207.342 )
rotation = 1.32582

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.712

[node name="MiniGameCountdownTimer" parent="." instance=ExtResource( 6 )]

[node name="Node2D" parent="." instance=ExtResource( 7 )]

[connection signal="touched" from="Pipettes" to="." method="_on_Pipettes_touched"]
[connection signal="countownElapsed" from="MiniGameCountdownTimer" to="." method="_on_MiniGameCountdownTimer_countownElapsed"]
[connection signal="ended" from="Node2D" to="." method="_on_Node2D_ended"]
